package com.eventmgmt.notifications.model;

public enum NotificationStatus {
    SENT,
    PENDING,
    FAILED
}