package com.eventmgmt.notifications.model;

public enum NotificationType {
    EMAIL,
    SMS,
    PUSH
}