package com.eventmgmt.users.model;

public enum UserRole {
    ADMIN,
    ORGANIZER,
    PARTICIPANT,
    MODERATOR
}